refactor some graal configuration